--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -21,6 +21,7 @@
       <!--TMPL_INCLUDE NAME="header.html"-->
       {% include "main/blocks/header.html" %}
       <!--TMPL_INCLUDE NAME="navbar.html"-->
+      {% include "main/blocks/navbar.html" %}
     </header>
     {% block workarea %}{% endblock  %}
     <!--TMPL_INCLUDE NAME="inc/main.footer.html"-->
@@ -28,19 +29,19 @@
     <div id="check-tip"></div>
     <!--TMPL_INCLUDE NAME="cab.html"-->
     <!--TMPL_INCLUDE NAME="login.html"-->
-    <script src="/js/libs/jquery/jquery.js"></script>
-    <script src="/js/libs/date.format.js"></script>
-    <script src="/js/libs/jstorage.js"></script>
-    <script src="/js/libs/jquery.url.js"></script>
-    <script src="/js/extlib.js"></script>
-    <script src="/js/nCFG.js"></script>
-    <script src="/js/nCOMMON.2.js"></script>
-    <script src="/js/nDATA.js"></script>
-    <script src="/js/nFIND.js"></script>
-    <script src="/js/libs/carousel/carousel.3.js"></script>
-    <script src="/js/nNEWS.js"></script>
-    <script src="/js/nUSER.1.js"></script>
-    <script src="/js/nHEADER.js"></script>
+    <script src="{% static "/js/libs/jquery/jquery.js" %}"></script>
+    <script src="{% static "/js/libs/date.format.js" %}"></script>
+    <script src="{% static "/js/libs/jstorage.js" %}"></script>
+    <script src="{% static "/js/libs/jquery.url.js" %}"></script>
+    <script src="{% static "/js/extlib.js" %}"></script>
+    <script src="{% static "/js/nCFG.js" %}"></script>
+    <script src="{% static "/js/nCOMMON.2.js" %}"></script>
+    <script src="{% static "/js/nDATA.js" %}"></script>
+    <script src="{% static "/js/nFIND.js" %}"></script>
+    <script src="{% static "/js/libs/carousel/carousel.3.js" %}"></script>
+    <script src="{% static "/js/nNEWS.js" %}"></script>
+    <script src="{% static "/js/nUSER.1.js" %}"></script>
+    <script src="{% static "/js/nHEADER.js" %}"></script>
     <script>
       "use strict";
       var g_main_recommended;
