--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -26,6 +26,7 @@
     {% block workarea %}{% endblock  %}
     <!--TMPL_INCLUDE NAME="inc/main.footer.html"-->
     <!--TMPL_INCLUDE NAME="rtoolbar.html"-->
+    {% include "main/blocks/button.html" %}
     <div id="check-tip"></div>
     <!--TMPL_INCLUDE NAME="cab.html"-->
     <!--TMPL_INCLUDE NAME="login.html"-->
