--- a/main/templates/main/blocks/footer.html
+++ b/main/templates/main/blocks/footer.html
@@ -69,7 +69,7 @@
         href="whatsapp://send?phone=<!--TMPL_VAR NAME='whatsapp'-->"
         rel="nofollow"
         title="Whatsapp"
-        ><img src="/images/whatsapp-b.png" alt="whatsapp"
+        ><img src="{% static "/images/whatsapp-b.png" %}" alt="whatsapp"
       /></a>
       <!--/TMPL_IF-->
     </div>
