--- a/main/templates/main/blocks/navbar.html
+++ b/main/templates/main/blocks/navbar.html
@@ -21,55 +21,12 @@
     <a href="/obogrevateli" itemprop="url" title="">Обогреватели</a>
     <div class="navbar-sublist-show">
       <div class="navbar-sublist">
+        {% tag_categories_heat as categories %}
+        {% for el in categories %}
         <div class="navbar-subitem" itemprop="name">
-          <a
-            href="/obogrevateli/gazovaya-teplovaya-pushka"
-            itemprop="url"
-            title=""
-            >Газовые тепловые пушки</a
-          >
+          <a href="/obogrevateli/{{el.slug}}" itemprop="url" title="">{{el.name}}</a>
         </div>
-        <div class="navbar-subitem" itemprop="name">
-          <a
-            href="/obogrevateli/dizelnaya-teplovaya-pushka"
-            itemprop="url"
-            title=""
-            >Дизельные тепловые пушки</a
-          >
-        </div>
-        <div class="navbar-subitem" itemprop="name">
-          <a href="/obogrevateli/konvektor" itemprop="url" title=""
-            >Конвекторы</a
-          >
-        </div>
-        <div class="navbar-subitem" itemprop="name">
-          <a href="/obogrevateli/maslyanyj-radiator" itemprop="url" title=""
-            >Масляные радиаторы</a
-          >
-        </div>
-        <div class="navbar-subitem" itemprop="name">
-          <a href="/obogrevateli/teploventilyator" itemprop="url" title=""
-            >Тепловентиляторы</a
-          >
-        </div>
-        <div class="navbar-subitem" itemprop="name">
-          <a href="/obogrevateli/teplovye-nasosy" itemprop="url" title=""
-            >Тепловые насосы</a
-          >
-        </div>
-        <div class="navbar-subitem" itemprop="name">
-          <a href="/obogrevateli/elektricheskij-kamin" itemprop="url" title=""
-            >Электрические камины</a
-          >
-        </div>
-        <div class="navbar-subitem" itemprop="name">
-          <a
-            href="/obogrevateli/elektricheskaya-teplovaya-pushka"
-            itemprop="url"
-            title=""
-            >Электрические тепловые пушки</a
-          >
-        </div>
+        {% endfor %}
       </div>
     </div>
   </div>
@@ -86,23 +43,11 @@
       </div>
     </div>
   </div>
+  {% tag_categories_nav as navbar %}
+  {% for el in navbar %}
   <div class="navbar-item" itemprop="name">
-    <a href="/dostavka" itemprop="url" title="">Доставка</a>
+    <a href="/{{el.slug}}" itemprop="url" title="">{{el.name}}</a>
   </div>
-  <div class="navbar-item" itemprop="name">
-    <a href="/ustanovka" itemprop="url" title="">Установка</a>
-  </div>
-  <div class="navbar-item" itemprop="name">
-    <a href="/obsluzhivanie" itemprop="url" title="">Обслуживание</a>
-  </div>
-  <div class="navbar-item" itemprop="name">
-    <a href="/info" itemprop="url" title="">Справочная информация.</a>
-  </div>
-  <div class="navbar-item" itemprop="name">
-    <a href="/kontakty" itemprop="url" title="">Контакты</a>
-  </div>
-  <div class="navbar-item" itemprop="name">
-    <a href="/vacansii" itemprop="url" title="">Вакансии</a>
-  </div>
+  {% endfor %}
   <div class="clr"></div>
 </nav>
